# herd-agent-claude

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
herd_agent_claude/: __init__.py  adapter.py
tests/: test_adapter.py
