[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herd-agent-claude"
version = "0.1.0"
description = "Herd execution adapter for Claude Code CLI — implements AgentAdapter protocol."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Faust Eriksen" }]
keywords = ["ai", "agents", "herd", "claude", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["herd-core>=0.0.1"]

[project.urls]
Repository = "https://github.com/dbt-conceptual/herd-agent-claude"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
