[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herd-agent-claude"
version = "0.1.0"
description = "Herd execution adapter for Claude Code CLI — implements AgentAdapter protocol."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Faust Eriksen" }]
keywords = [
    "ai", "agents", "governance", "herd", "claude", "claude-code",
    "agent-framework", "execution-adapter"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = ["herd-core>=0.0.1"]

[project.urls]
Homepage = "https://github.com/herd-ag/herd-agent-claude"
Repository = "https://github.com/herd-ag/herd-agent-claude"
Issues = "https://github.com/herd-ag/herd-agent-claude/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
